# MarketDataKafkaSetup

./: .gitmodules  CMakeLists.txt  README.md
dataloader/: market_data_loader.cpp
renderer/: renderer.py  requirements.txt
renderer/templates/: index.html
